# Proyecto2MCAV

./: AplicacionADN.cpp  AplicacionADN.h  CMakeLists.txt  ContEnfermedades.cpp  ContEnfermedades.h  ContPacientes.cpp  ContPacientes.h  Enfermedad.cpp  Enfermedad.h  IReporte.cpp  IReporte.h  InterfazUsuario.cpp  InterfazUsuario.h  Paciente.cpp  Paciente.h  RepAnalisis1.cpp  RepAnalisis1.h  RepAnalisis2.cpp  RepAnalisis2.h  RepAnalisis3.cpp  RepAnalisis3.h  Utilities.cpp  Utilities.h  main.cpp  utilities.cpp  utilities.h
