cmake_minimum_required(VERSION 3.26)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 main.cpp
        AplicacionADN.cpp
        AplicacionADN.h
        AplicacionADN.h
        ContEnfermedades.cpp
        ContEnfermedades.h
        ContPacientes.cpp
        ContPacientes.h
        Enfermedad.cpp
        Enfermedad.h
        Enfermedad.h
        InterfazUsuario.cpp
        InterfazUsuario.h
        IReporte.cpp
        IReporte.h
        Paciente.cpp
        Paciente.h
        RepAnalisis1.cpp
        RepAnalisis1.h
        RepAnalisis2.cpp
        RepAnalisis2.h
        RepAnalisis3.cpp
        RepAnalisis3.h
        Utilities.cpp
        Utilities.h
)
